@@ -1,2 +1,3 @@
 Matching project 0.1.0 (十一月 04, 2012):
 	* Feature add: project start
+    * Feature add: add S2P reader and the demo cpp
